UY-1348 Fix button text alignment after migration to Vaadin 24

--- a/vaadin-styles/src/main/resources/styles.css
+++ b/vaadin-styles/src/main/resources/styles.css
@@ -285,6 +285,11 @@ vaadin-grid[navigating]::part(focused-cell last-column-cell):focus::before {
     box-shadow: unset;
 }
 
+vaadin-button.u-text-left::part(label) {
+    padding-right: 80%;
+    text-overflow: clip;
+}
+
 /*
     Styling based on vaadin and unity classes
 */
